# TinyWidgetLibrary

./: README.md
TinyWidgetLibrary/: CMakeLists.txt  CMakeUserPresets.json  main.cpp  resource.qrc
TinyWidgetLibrary/MyWidget/Buttons/CheckableButton/: CheckButton.h  RadioButton.h  SwitchButton.h  ToggleButton.h
TinyWidgetLibrary/MyWidget/Buttons/RectangleButton/: StandardButton.h
TinyWidgetLibrary/MyWidget/Helper/Button/: CheckableButton.h  RectangleButton.h
TinyWidgetLibrary/MyWidget/Helper/Ripple/: Overlay.h  OverlayAbstractButton.h  Ripple.h  RollingRipple.h  RoundRipple.h
TinyWidgetLibrary/MyWidget/Helper/SliderWidget/: SliderWidget.h
TinyWidgetLibrary/MyWidget/Helper/TextBox/: PaintWidget.h
TinyWidgetLibrary/MyWidget/Helper/Window/: PointFixedWidget.h  RemovableWindow.h  SizeFixedWidget.h
TinyWidgetLibrary/MyWidget/PopupBox/: FloatWindow.h  MessageBoxHint.h  SizeFixedDialog.h
TinyWidgetLibrary/MyWidget/Progress/: Slider.h
TinyWidgetLibrary/MyWidget/TextBox/: ComboBox.h  TextBox.h
TinyWidgetLibrary/example/: example.h
TinyWidgetLibrary/src/Buttons/CheckableButton/: CheckButton.cpp  RadioButton.cpp  SwitchButton.cpp  ToggleButton.cpp
TinyWidgetLibrary/src/Buttons/RectangleButton/: StandardButton.cpp
TinyWidgetLibrary/src/Helper/Button/: CheckableButton.cpp  RectangleButton.cpp
TinyWidgetLibrary/src/Helper/Ripple/: Overlay.cpp  OverlayAbstractButton.cpp  Ripple.cpp  RollingRipple.cpp  RoundRipple.cpp
TinyWidgetLibrary/src/Helper/SliderWidget/: SliderWidget.cpp
TinyWidgetLibrary/src/PopupBox/: FloatWindow.cpp  MessageBoxHint.cpp  SizeFixedDialog.cpp
TinyWidgetLibrary/src/Progress/: Slider.cpp
TinyWidgetLibrary/src/TextBox/: ComboBox.cpp  TextBox.cpp
(+8 files in other folders)
